fix(css): fix search overflow firefox
Add min-width to the input to fix overflowing icons in Firefox.

Closes DCOS-40687

--- a/src/styles/components/form-elements/form-group/styles.less
+++ b/src/styles/components/form-elements/form-group/styles.less
@@ -35,10 +35,14 @@
         }
       }
     }
-  }
 
-  .health-tab input {
-    min-width: 0;
+    input {
+      min-width: 0;
+    }
+
+    .form-control-group-add-on .icon {
+      display: block;
+    }
   }
 }
 
